# past-forward

./: .gitignore  README.md
be/: .dockerignore  .env.example  Dockerfile  E2E_REPORT.md  README.md  config.e2e.yaml  config.example.yaml  manual_layouts.json  pyproject.toml  railway.toml
be/digitized/20260720-1505_IMG_0982_nm_07_04_1949_page1_codex-development/: 20260720-1505_IMG_0982_nm_07_04_1949_page1.articles.json  20260720-1505_IMG_0982_nm_07_04_1949_page1.md  20260720-1505_IMG_0982_nm_07_04_1949_page1.overlay.json
be/digitized/20260720-1624_IMG_0933_rd_07_04_1949_page3_incremental/: 20260720-1624_IMG_0933_rd_07_04_1949_page3.articles.json  20260720-1624_IMG_0933_rd_07_04_1949_page3.md  20260720-1624_IMG_0933_rd_07_04_1949_page3.overlay.json
be/digitized/20260720-1837_IMG_0923_rd_07_02_1949_page2_incremental/: 20260720-1837_IMG_0923_rd_07_02_1949_page2.articles.json  20260720-1837_IMG_0923_rd_07_02_1949_page2.md
be/digitized/20260721-0814_IMG_0965_st_07_15_1949_page1_incremental/: 20260721-0814_IMG_0965_st_07_15_1949_page1.articles.json  20260721-0814_IMG_0965_st_07_15_1949_page1.md
be/digitized/20260721-0827_IMG_0935_rd_07_05_1949_page1_incremental/: 20260721-0827_IMG_0935_rd_07_05_1949_page1.articles.json  (+4 more)
be/search_data/: README.md
be/tests/: test_adapter.py  test_agent_api.py  test_archive_index.py  test_digitization_agent.py  test_incremental_agent.py  test_metadata.py  test_metrics.py  test_models.py  test_overlay_agent.py  test_pen_agent.py  test_provenance.py  test_regional_pipeline.py  test_runner.py  test_scans.py  test_system.py
(+48 files in other folders)
